# polygen

./: .dockerignore  .gitignore  Dockerfile  License.txt  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
polygen/: engine.py  engine_v2.py  engine_v2_2.py  log.out  polygen.py  sequence_examples.txt
polygen/overhangsets/: setsof10.csv  setsof12.csv  setsof14.csv  setsof15.csv  setsof16.csv  setsof17.csv  setsof19.csv  setsof20.csv  setsof22.csv  setsof23.csv  setsof25.csv  setsof27.csv  setsof31.csv  setsof33.csv  setsof34.csv  setsof36.csv  setsof38.csv  setsof39.csv  setsof41.csv  setsof45.csv  setsof47.csv  setsof48.csv  setsof49.csv
polygen/templates/: base.html  index.html  learn_more.html  primer_list.html  sequence.html
polygen_engine/: __init__.py  engine.py
polygen_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polygen_engine/overhangsets/: setsof11.csv  setsof13.csv  setsof21.csv  setsof24.csv  setsof28.csv  setsof42.csv
polygen_scripts/: Makefile  __init__.py  engine.py  polygen.py
polygen_scripts/overhangsets/: setsof32.csv  setsof43.csv  setsof44.csv
polygen_scripts/source/: conf.py  engine.rst
polygen_scripts/static/: nouislider_materialize.css  polygen_ui.css  tooltip.css
polygen_scripts/templates/: base.html  impressum.html  learn_more.html  main.html  peg_generation.html  primer_list.html  sequence.html  tas_generation.html
polygen_scripts/testing/: test_PTGbldr.py  test_ggOptimization.py  test_helper.py  test_input_data.json  test_oligo_integrity.py  test_pegbldr.py  test_scarlessGG.py  test_webApplication.py
polygen_scripts/testing/pg_test0_gRNAs_2021-08-17/: test0_gRNAs.gb  test0_gRNAs_oligos.csv  test0_gRNAs_raw.json
polygen_scripts/testing/pg_test10_lowerTemp_2021-08-17/: test10_lowerTemp.gb  test10_lowerTemp_oligos.csv  test10_lowerTemp_raw.json
polygen_scripts/testing/pg_test11_higherTemp_2021-08-17/: test11_higherTemp.gb  test11_higherTemp_oligos.csv  test11_higherTemp_raw.json
polygen_scripts/testing/pg_test12_annLen_2021-03-26/: test12_annLen.gb  test12_annLen_oligos.csv  test12_annLen_raw.json
polygen_scripts/testing/pg_test13_staticBorderPrimers_2021-08-17/: test13_staticBorderPrimers.gb  (+2 more)
(+31 files in other folders)
