[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygen-engine"
version = "0.2.1"
description = "PolyGEN engine for designing multiplexed RNA arrays and Golden Gate oligos."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["License.txt"]
authors = [
    {name = "Uriel Urquiza-Garcia"}
]
keywords = ["synthetic-biology", "golden-gate", "crispr", "gRNA", "tRNA", "tigRNA", "TasA", "TasH"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3,<3",
    "biopython==1.77"
]

[project.urls]
Repository = "https://github.com/jurquiza/polygen"

[project.scripts]
polygen-engine = "polygen_engine.cli:main"

[tool.setuptools.packages.find]
include = ["polygen_engine*"]

[tool.setuptools.package-data]
polygen_engine = ["overhangsets/*.csv"]
